# GrIS_vel

./: .gitignore  LICENSE.txt  README.md  plotting_routine.ipynb  pyproject.toml  requirements.txt
.github/workflows/: basic.yml  codecov-action.yml
Analysis/: AnalysisREADME.md  Stations.py  __init__.py  load_data.py  plotting.py  plotting_routine.ipynb  run_analysis.py
Analysis/Tools/: find_max.py  find_mean.py  find_min.py  linfit.py  max.py  moving_mean.py
Data/: DataREADME.md  GPS_stations_coords.csv
Tests/: TestsREADME.md  test_linfit.py  test_max.py  test_mean.py  test_min.py  test_moving_mean.py
