[project]
name = "GrIS_vel"
version = "0.0.1"
authors = [
  { name="Grace Gjerde", email="grace.gjerde@reuben.ox.ac.uk"},
  { name="Aryaman Gupta", email="mert4366@ox.ac.uk"},
  { name="Becky Tichford", email="rebecca.tichford@univ.ox.ac.uk"},
]
description = "A Python package to identify and characterize transient acceleration events at North Lake in Southwest Greenland."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[tool.setuptools.packages.find]
include = ["Data", "Analysis", "Tests"]

dependencies = [
  "contourpy==1.3.3",
  "coverage==7.11.0",
  "cycler==0.12.1",
  "fonttools==4.60.1",
  "iniconfig==2.3.0",
  "joblib==1.5.2",
  "kiwisolver==1.4.9",
  "atplotlib==3.10.7",
  "numpy==2.3.4",
  "packaging==25.0",
  "pandas==2.3.3",
  "pillow==12.0.0",
  "pluggy==1.6.0",
  "Pygments==2.19.2",
  "pyparsing==3.2.5",
  "pytest==8.4.2",
  "pytest-cov==7.0.0",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "scikit-learn==1.7.2",
  "scipy==1.16.2",
  "six==1.17.0",
  "threadpoolctl==3.6.0",
  "tzdata==2025.2",
  "argparse==1.4.0",
]

[project.scripts]
run_analysis = "Analysis.run_analysis:main"

[project.urls]
Homepage = "https://github.com/grace-gjerde/Greenland_Transient_Velocity_Event_Characterizer"
Issues = "https://github.com/grace-gjerde/Greenland_Transient_Velocity_Event_Characterizer/issues"
